--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "bms": "^51.0.0",
     "eslint": "8.41.0",
